# lib-version

./: README.md  dynamic_version.txt  pyproject.toml  setup.py
.github/workflows/: release.yml
src/lib_version.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/versionutil/: __init__.py  _version.py  version.py
tests/: test_version.py
