[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-version"
description = "A version-aware library for retrieving its own version"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "Anna Visman", email = "a.c.visman@student.tudelft.nl" } ]
requires-python = ">=3.7"
dependencies = []
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"